# coq-learn

./: pyproject.toml
coq_learn/filter_events/: __main__.py
coq_learn/premise_select/: __init__.py
coq_learn/premise_select/generate_dataset/: __main__.py
coq_learn/tactic_predict/: __init__.py
coq_learn/tactic_predict/generate_dataset/: __main__.py
coq_learn/tactic_predict/infer/: __main__.py
coq_learn/tactic_predict/proof_search/: __main__.py
coq_learn/tactic_predict/train/: __main__.py
